<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mim_development.android.rest.mimrest.HomeActivity">

    <EditText
        android:id="@+id/authentication_activity_username_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/authentication_activity_user_name_hint"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:text="@string/authentication_activity_default_user_name_value"/>

    <EditText
        android:id="@+id/authentication_activity_password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/authentication_activity_password_hint"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/authentication_activity_username_edittext"
        android:text="@string/authentication_activity_default_password_value"/>

    <Button
        android:id="@+id/authentication_activity_authenticate_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/authentication_activity_authenticate_button_label"
        android:layout_below="@id/authentication_activity_password_edittext"
        android:onClick="authenticateActivityAuthenticateButton_onClick"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/authentication_activity_get_profile_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/authentication_activity_get_profile_button_label"
        android:layout_below="@id/authentication_activity_authenticate_button"
        android:onClick="authenticateActivityGetProfileButton_onClick"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
